<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GameSetup.GameSetup">

    <TableLayout
        android:id="@+id/addplayerTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_add_player"
                android:paddingEnd="25dp"/>

            <EditText
                android:id="@+id/inpName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="14"
                android:inputType="text"
                android:text="Name" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/addPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/submit_add_player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_add_player" />

    <Button
        android:id="@+id/submit_add_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_player_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addPlayer"
        app:layout_constraintTop_toBottomOf="@+id/title_add_player" />

    <TextView
        android:id="@+id/title_add_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add_player"
        app:layout_constraintBottom_toTopOf="@+id/addplayerTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>