<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">


<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent" >-->

    <TableLayout
        android:id="@+id/table1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tHeadName"
                android:padding="15dp"
                android:text="@string/tHeadName" />

            <TextView
                android:id="@+id/tHeadLatestPlacement"
                android:padding="15dp"
                android:text="@string/tHeadLatestPlacement" />

            <TextView
                android:id="@+id/tHeadTotalScore"
                android:padding="15dp"
                android:text="@string/tHeadTotalScore" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/enter_match_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_Match_Btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_cup_btn"
        app:layout_constraintTop_toBottomOf="@+id/table1" />

    <Button
        android:id="@+id/cancel_match_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_match_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_cup_btn"
        app:layout_constraintTop_toBottomOf="@+id/table1" />

    <Button
        android:id="@+id/add_cup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_cup_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_match_btn"
        app:layout_constraintStart_toEndOf="@id/enter_match_btn"
        app:layout_constraintTop_toBottomOf="@+id/table1" />
    <!--    </ScrollView>-->
</androidx.constraintlayout.widget.ConstraintLayout>

<!--Dynamic Table with Header V 0.1  -->
<!--    <FrameLayout-->
<!--        android:id="@+id/frameLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <TableLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintTop_toTopOf="parent">-->

<!--            <TableRow>-->

<!--                <TextView-->
<!--                    android:layout_width="50px"-->
<!--                    android:layout_column="0"-->
<!--                    android:layout_weight="1"-->
<!--                    android:text="Id" />-->

<!--                <TextView-->
<!--                    android:layout_width="50px"-->
<!--                    android:layout_column="1"-->
<!--                    android:layout_weight="1"-->
<!--                    android:text="Name"></TextView>-->

<!--                <TextView-->
<!--                    android:layout_width="50px"-->
<!--                    android:layout_column="2"-->
<!--                    android:layout_weight="1"-->
<!--                    android:text="Gesamt Score"></TextView>-->
<!--            </TableRow>-->

<!--            <TableLayout-->
<!--                android:id="@+id/table1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent">-->
<!--                &lt;!&ndash; Table Content wird in dem Fragment dynamisch generiert &ndash;&gt;-->
<!--            </TableLayout>-->

<!--        </TableLayout>-->
<!--    </FrameLayout>-->

