<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="de.melchers.heat.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_game_setup"
            app:destination="@id/navigation_game_setup" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_home_to_cupFragment"
            app:destination="@id/cupFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="de.melchers.heat.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_dashboard_to_cupFragment"
            app:destination="@id/cupFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="de.melchers.heat.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_game_setup"
        android:name="de.melchers.heat.ui.GameSetup.GameSetup"
        android:label="fragment_add_player"
        tools:layout="@layout/fragment_game_setup" >
        <action
            android:id="@+id/action_navigation_game_setup_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
    <fragment
        android:id="@+id/cupFragment"
        android:name="de.melchers.heat.ui.CupList.CupFragment"
        android:label="fragment_cup_list"
        tools:layout="@layout/fragment_cup_list" >
        <action
            android:id="@+id/action_cupFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_cupFragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_cupFragment_to_cupDetailFragment"
            app:destination="@id/cupDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/cupDetailFragment"
        android:name="de.melchers.heat.ui.CupDetail.CupDetailFragment"
        android:label="CupDetailFragment" >
        <action
            android:id="@+id/action_cupDetailFragment_to_cupFragment"
            app:destination="@id/cupFragment" />
        <action
            android:id="@+id/action_cupDetailFragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_cupDetailFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>